- Update OG tags

--- a/flight-of-fancy.html
+++ b/flight-of-fancy.html
@@ -3,8 +3,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="Description" content="An interactive spoken-word adventure by doublespeak games." />
-    <meta itemprop="image" property="og:image" content="images/AFOF-125.png">
-    <meta itemprop="name" property="og:title" content="A Flight of Fancy">
+
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://media.doublespeakgames.com/AFOF-og.png">
+    <meta property="og:image:width" content="620">
+    <meta property="og:image:height" content="620">
+    <meta property="og:title" content="A Flight of Fancy">
+    <meta property="og:description"content="An interactive spoken-word adventure by doublespeak games." />
+    <meta property="og:url"content="http://www.doublespeakgames.com/flight-of-fancy.html" />
 
     <title>A Flight of Fancy</title>
     <style>
