Add structured data

--- a/flight-of-fancy.html
+++ b/flight-of-fancy.html
@@ -12,6 +12,16 @@
     <meta property="og:description"content="An interactive spoken-word adventure by doublespeak games." />
     <meta property="og:url"content="http://www.doublespeakgames.com/flight-of-fancy.html" />
 
+    <script type="application/ld+json">
+      {
+        "@context" : "http://schema.org",
+        "@type" : "Product",
+        "name" : "A Flight of Fancy",
+        "image" : "http://media.doublespeakgames.com/AFOF-og.png",
+        "description" : "An interactive spoken-word adventure by doublespeak games."
+      }
+    </script>
+
     <title>A Flight of Fancy</title>
     <style>
 
