--- a/flight-of-fancy.html
+++ b/flight-of-fancy.html
@@ -47,6 +47,7 @@
         display: flex;
         justify-content: center;
         height: 200px;
+        overflow:hidden;
         background: radial-gradient(circle at 0 0, #FFF23A, #FDC60C 6.09%, #F3953C 16%, #F3903F 28.35%, #ED683C 58.76%, #E83E39 100%);
         font-size: 32px;
         color: white;
@@ -69,6 +70,8 @@
         position: relative;
         display: inline-block;
         font-family: 'Sanchez', serif;
+        color: inherit;
+        text-decoration: none;
         line-height: 1.5;
         font-style: italic;
         margin: 0;
@@ -141,13 +144,13 @@
       <img id='banner-logo' src="images/AFOF-banner.svg" />
     </header>
     <section class='content'>
-      <div class='command'>
+      <a href="https://assistant.google.com/services/a/uid/000000d4a7fab5ca" class='command'>
         Hey Google... <br>
         <span class='indent'>Talk to A Flight of Fancy</span>
-      </div>
+      </a>
     </section>
     <section class='content'>
-      <span><span class='indent game-title'>A Flight of Fancy</span> is an interactive spoken-word adventure for Google Assistant, harkening back to the days of Zork and the golden age of point-and-click adventure games. Explore unreal environments, solve puzzles, and unravel the mystery.</span>
+      <span><span class='indent game-title'>A Flight of Fancy</span> is an interactive spoken-word adventure for Google Assistant, inspired by classic text and point-and-click adventure games. Explore unreal environments, solve puzzles, and unravel the mystery.</span>
     </section>
     <footer class='info'>
       <a title="doublespeak games" class='logo icon' href='http://www.doublespeakgames.com' target="_blank"><svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 41.75 32.84375"><path d="m 18.024533,28.5722 c 2.532365,-2.243 5.064679,-4.4861 7.596993,-6.7292 4.907813,0 9.815625,0 14.723438,0 0,-6.8136 0,-13.6272 0,-20.4408 -12.976656,0 -25.953312,0 -38.9299676,0 0,6.8136 0,13.6272 0,20.4408 3.2917905,0 6.5835811,0 9.8753716,0 -0.643311,2.2431 -1.286622,4.4861 -1.9299604,6.7292 2.5323644,-2.243 5.0646784,-4.4861 7.5969924,-6.7292 0.999066,0 1.998131,0 2.997197,0 -0.643345,2.2431 -1.286691,4.4861 -1.930064,6.7292 z" style="stroke-width:2.0;stroke-linejoin:miter;stroke-miterlimit:10;stroke-dasharray:none"></path></svg></a>
