--- a/index.html
+++ b/index.html
@@ -224,15 +224,10 @@
         An abstract strategy game for two.
 			</div>
     </a><a
-		 id='flight-of-fancy' class="gameListing" title="A Flight of Fancy" target="_blank">
-      
-      <!--<div class="gameDetails">
+		 id='flight-of-fancy' href="flight-of-fancy.html" class="gameListing" title="A Flight of Fancy" target="_blank"> 
+      <div class="gameDetails">
 				<h3>A Flight of Fancy</h3>
         An interactive spoken-word adventure.
-      </div>-->
-
-      <div class="gameDetails coming-soon">
-        <h3>Coming Soon!</h3>
       </div>
 		</a>
 		<div style="clear:both"></div>
