--- a/flight-of-fancy.html
+++ b/flight-of-fancy.html
@@ -157,5 +157,16 @@
       <a title="Facebook" class="icon" href="https://www.facebook.com/doublespeakgames" target="_blank"><img class='social' src="images/fb.svg" alt="Facebook" /></a>
 		  <a title="Twitter" class="icon" href="https://twitter.com/continuities" target="_blank"><img class='social' src="images/twitter.svg" alt="Twitter" /></a>
     </footer>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-41314886-3', 'doublespeakgames.com');
+      ga('send', 'pageview', location.pathname);
+    </script>
+
   </body>
 </html>
