Penrose coming soon

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 	#adarkroom {
 		background-image: url(images/adr.png);
 	}
-	
 	#gridland {
 		background-image: url(images/gridland.png);
 	}
@@ -87,6 +86,9 @@
 	}
   #flight-of-fancy {
     background-image: url(images/AFOF-620.png);
+  }
+  #penrose {
+    background-image: url(images/penrose.png);
   }
 	
 	.gameListing:before {
@@ -206,7 +208,11 @@
 	</section>
 	<section id="games">
 		<h2>- GAMES -</h2>
-		<a id='adarkroom' href="http://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
+		<div id='penrose' href="#" class="gameListing" title="Penrose" >
+			<div class="gameDetails coming-soon">
+				<h3>Coming Soon!</h3>
+			</div>
+		</div><a id='adarkroom' href="http://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
 			<div class="gameDetails">
 				<h3>A Dark Room</h3>
 				A minimalist text adventure.
