move penrose logo to s3

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     background-image: url(images/AFOF-620.png);
   }
   #penrose {
-    background-image: url(images/penrose.png);
+    background-image: url(http://media.doublespeakgames.com/penrose.png);
   }
 	
 	.gameListing:before {
