--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
 	<style type="text/css">
 
+  html {
+    padding: 0 10%;
+  }
+
 	body {
 		font-size: 1.5em;
-	}
-
-	section {
-		font-family: 'Open Sans Condensed', Verdana, Helvetica, sans-serif;
+    font-family: 'Open Sans Condensed', Verdana, Helvetica, sans-serif;
+    margin: 0 auto;
+    max-width: 720px;
 	}
 	
 	a {
@@ -37,27 +40,12 @@
 		width: 100%;
 	}
 
-	h1 {
-		margin: 0;
-	}
-
-	h2 {
-		text-align: center;
-		font-size: 2em;
-		font-weight: 300;
-		white-space: nowrap;
-	}
-
-	section {
-		margin: 0 20%;
-	}
+  #banner {
+    margin:0 0 30px;
+  }
 
 	#about {
 		text-align: center;
-	}
-
-	#about h2 {
-		margin-top: 0;
 	}
 
 	#games {
@@ -124,27 +112,34 @@
 		-o-box-sizing: border-box;
 		width: 100%;
 		color: white;
-		font-size: 0.5em;
 		text-align: left;
 	}
 
-	#social {
-		margin-top: 20px;
-		text-align: right;
+	#links {
+    z-index: 1;
+    position: sticky;
+    width: 100%;
+    top: 0;
+    left: 0;
+		display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background: rgba(255, 255, 255, 0.95);
+    padding: 10px 0;
 	}
 
-	#social img {
+	#links img {
 		width: 40px;
 		height: 40px;
 	}
 
-	#social a {
-		margin: 0 10px;
+	#links a {
+		margin-left: 10px;
 	}
 
-	#social a:nth-child(2) {
-		margin-right: 0;
-	}
+  .icon-link {
+    font-size: 0;
+  }
 
 	@media screen and (min-width: 720px) {
 		#full-banner {
@@ -189,30 +184,29 @@
 			-o-transform: translateY(0);
     }
 
-    #social a:nth-child(2) {
-      margin-right: 5%;
-    }
+    #games {
+      margin: 0 -2.5%;
+	  }
 	}
 	</style>
 </head>
 <body>
-	<h1>
-		<img id="full-banner" src="http://www.doublespeakgames.com/images/doublespeaksingleboxwhite.svg" alt="doublespeak games">
-		<img id="small-banner" src="http://www.doublespeakgames.com/images/DBLSPKwhite.svg" alt="doublespeak games">
-	</h1>
-	<section id="about">
-		<h2>- ABOUT -</h2>
-		Doublespeak is a small independent game studio focused on open source, browser based experiences.
-		<br/>
-		Read the <a href='http://blog.doublespeakgames.com/' title='blog'>blog</a>, or visit on <a href="http://www.github.com/doublespeakgames">Github</a>!
-	</section>
+  <nav id="links">
+    <a target="_blank" href="http://press.doublespeakgames.com">PRESS</a>
+    <a target="_blank" class="icon-link" title="Instagram" href="https://www.instagram.com/doublespeakgames"><img src="images/instagram.svg" alt="Instagram"/></a>
+    <a target="_blank" class="icon-link" title="Facebook" href="https://www.facebook.com/doublespeakgames"><img src="images/fb.svg" alt="Facebook" /></a>
+		<a target="_blank" class="icon-link" title="Twitter" href="https://twitter.com/doublespeakgame"><img src="images/twitter.svg" alt="Twitter" /></a>
+  </nav>
+	<h1 id="banner">
+		<img id="full-banner" src="images/doublespeaksingleboxwhite.svg" alt="doublespeak games">
+		<img id="small-banner" src="images/DBLSPKwhite.svg" alt="doublespeak games">
+  </h1>
 	<section id="games">
-		<h2>- GAMES -</h2>
-		<div id='penrose' href="#" class="gameListing" title="Penrose" >
+		<a id='penrose' href="http://press.doublespeakgames.com/penrose" class="gameListing" title="Penrose" >
 			<div class="gameDetails coming-soon">
 				<h3>Coming Soon!</h3>
 			</div>
-		</div><a id='adarkroom' href="http://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
+		</a><a id='adarkroom' href="http://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
 			<div class="gameDetails">
 				<h3>A Dark Room</h3>
 				A minimalist text adventure.
@@ -236,13 +230,6 @@
         An interactive spoken-word adventure.
       </div>
 		</a>
-		<div style="clear:both"></div>
-	</section>
-
-	<section id="social" >
-		<a title="Facebook" href="https://www.facebook.com/doublespeakgames"><img src="http://www.doublespeakgames.com/images/fb.svg" alt="Facebook" /></a>
-		<a title="Twitter" href="https://twitter.com/continuities"><img src="http://www.doublespeakgames.com/images/twitter.svg" alt="Twitter" /></a>
-		<div style="clear:both"></div>
 	</section>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -252,7 +239,6 @@
 
   ga('create', 'UA-41314886-3', 'doublespeakgames.com');
   ga('send', 'pageview');
-
 </script>
 </body>
 </html>
