--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	}
 	
 	a {
-		color: #0077CC;
+		color: black;
 		text-decoration: none;
 	}
 	
@@ -28,7 +28,7 @@
 	}
 	
 	a:visited {
-		color: #4A6B82;
+		color: black;
 	}
 
 	#full-banner {
@@ -202,9 +202,10 @@
 		<img id="small-banner" src="images/DBLSPKwhite.svg" alt="doublespeak games">
   </h1>
 	<section id="games">
-		<a id='penrose' href="http://press.doublespeakgames.com/penrose" class="gameListing" title="Penrose" >
-			<div class="gameDetails coming-soon">
-				<h3>Coming Soon!</h3>
+		<a id='penrose' href="https://penrose.doublespeakgames.com" class="gameListing" title="Penrose" >
+			<div class="gameDetails">
+        <h3>Penrose</h3>
+        A non-linear narrative about time, choice, and the nature of obsession.
 			</div>
 		</a><a id='adarkroom' href="http://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
 			<div class="gameDetails">
