--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		<img id="small-banner" src="images/DBLSPKwhite.svg" alt="doublespeak games">
   </h1>
 	<section id="games">
-		<a id='penrose' href="https://penrose.doublespeakgames.com" class="gameListing" title="Penrose" >
+		<a id='penrose' href="https://penrose.doublespeakgames.com" class="gameListing" title="Penrose" target="_blank" >
 			<div class="gameDetails">
         <h3>Penrose</h3>
         A non-linear narrative about time, choice, and the nature of obsession.
