--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<meta name="Description" content="Doublespeak is a small independent game studio focused on open source, browser based experiences." />
 	<title>doublespeak games</title>
-	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
 	<style type="text/css">
 
   html {
@@ -76,7 +76,7 @@
     background-image: url(images/AFOF-620.png);
   }
   #penrose {
-    background-image: url(http://media.doublespeakgames.com/penrose.png);
+    background-image: url(images/penrose.png);
   }
 	
 	.gameListing:before {
@@ -207,7 +207,7 @@
         <h3>Penrose</h3>
         A non-linear narrative about time, choice, and the nature of obsession.
 			</div>
-		</a><a id='adarkroom' href="http://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
+		</a><a id='adarkroom' href="https://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
 			<div class="gameDetails">
 				<h3>A Dark Room</h3>
 				A minimalist text adventure.
