- added Not A Robot

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
   #penrose {
     background-image: url(images/penrose.png);
   }
+	#not-a-robot {
+		background-image: url(images/not-a-robot.png);
+	}
 	
 	.gameListing:before {
 		display: block;
@@ -206,6 +209,11 @@
 			<div class="gameDetails">
         <h3>Penrose</h3>
         A non-linear narrative about time, choice, and the nature of obsession.
+			</div>
+		</a><a id='not-a-robot'  class="gameListing" title="Not A Robot" target="_blank" >
+			<div class="gameDetails coming-soon">
+        <h3>Not A Robot</h3>
+        Coming soon!
 			</div>
 		</a><a id='adarkroom' href="https://adarkroom.doublespeakgames.com" class="gameListing" title="A Dark Room" target="_blank">
 			<div class="gameDetails">
