--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		font-size: 1.5em;
     font-family: 'Open Sans Condensed', Verdana, Helvetica, sans-serif;
     margin: 0 auto;
-    max-width: 720px;
+    max-width: 960px;
 	}
 	
 	a {
@@ -190,6 +190,12 @@
     #games {
       margin: 0 -2.5%;
 	  }
+	}
+
+	@media screen and (min-width: 960px) {
+		.gameListing {
+			width: 28%;
+		}
 	}
 	</style>
 </head>
